2007-04-15  Philipp Kern <phil@0x539.de>

	* NEWS, configure.ac: bump version to 1.3.4, try to document
	  the changes

2007-04-15  Philipp Kern <phil@0x539.de>

	* configure.in: renamed to configure.ac

2007-04-07  Armin Burgmeier  <armin@0x539.de>

	* src/address.cpp: Fix self-assignment check in net6::ipv4_address and
	net6::ipv6_address. Fixes #254.

2007-04-02  Philipp Kern <phil@0x539.de>

	* inc/client.hpp: reset connection pointer if an error occurs

2007-02-25  Armin Burgmeier <armin@0x539.de>

	* inc/server.hpp: Added overload instead of default argument for ipv6
	parameter in reopen(). Older gcc versions seem not to support member
	variables as default arguments. I don't even know whether that's
	allowed by the C++ standard or not.

2007-02-25  Philipp Kern <phil@0x539.de>

	* NEWS, configure.in: Version bump to 1.3.3
	* README: Added GNUTLS to the dependency list

2007-02-25  Philipp Kern <phil@0x539.de>

	Reformatted ChangeLog to ease new entries which are not
	autogenerated anymore.

2007-02-24  Philipp Kern <phil@0x539.de>

	Remove a darcs relict.

2006-12-31  Armin Burgmeier <armin@0x539.de>

	Preserve API compatibility for the IPv6 fix

2006-11-08  Armin Burgmeier <armin@0x539.de>

	Made ipv6 a parameter to reopen

2006-11-04  Armin Burgmeier <armin@0x539.de>

	Reorder netinet/in.h inclusion in address.hpp

2006-11-04  Armin Burgmeier <armin@0x539.de>

	libtool stuff

2006-11-04  Armin Burgmeier <armin@0x539.de>

	Do not propagate any errors to the selector [fixes #215]

2006-09-24  Philipp Kern <phil@0x539.de>

	Updated ChangeLog for release

2006-09-24  Philipp Kern <phil@0x539.de>

	Updated build system supplementaries

2006-09-15  Philipp Kern <phil@0x539.de>

	Use CXXFLAGS instead of CFLAGS in gnutls detection

2006-09-05  Philipp Kern <phil@0x539.de>

	MingW compilation fix

2006-08-25  Philipp Kern <phil@0x539.de>

	Updated ChangeLog for release

2006-08-25  Philipp Kern <phil@0x539.de>

	Bump version to 1.3.1
